Day9/single_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    type: demo
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8080
      nodePort: 30390
